--- a/flow-state/client/package.json
+++ b/flow-state/client/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "0.27.1",
