--- a/flow-state/client/package.json
+++ b/flow-state/client/package.json
@@ -12,12 +12,21 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "0.27.1",
@@ -30,7 +39,12 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "eslint": "^7.21.0"
+    "eslint": "^7.21.0",
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/react": "~16.9.35",
+    "@types/react-dom": "~16.9.8",
+    "@types/react-native": "~0.63.2",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
