refactor: client to ts

--- a/flow-state/client/tsconfig.json
+++ b/flow-state/client/tsconfig.json
@@ -3,11 +3,12 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
-    "typeRoots": ["./src/types"],
+    // "typeRoots": ["./src/types"],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    "typeRoots": ["@types", "node_modules/@types"],
   }
 }
