--- a/flow-state/client/.eslintrc.json
+++ b/flow-state/client/.eslintrc.json
@@ -3,16 +3,20 @@
 //   extends: '@react-native-community',
 // };
 {
-  "extends": ["airbnb"],
+  "extends": ["@react-native-community", "airbnb-typescript", "@react-native-community", "airbnb-typescript", "prettier", "prettier/@typescript-eslint", "prettier/react"],
     "plugins": ["@typescript-eslint", "react"],
       "parser": "@typescript-eslint/parser",
         "rules": {
+          "import/extensions": ["error", "never"],
     "import/no-unresolved": 0,
       "react/jsx-filename-extension": [1, {
         "extensions": [
           ".jsx",
-          ".tsx"
+          ".tsx",
+          ".ts"
         ]
       }]
   }
-}
+  // "globals": {
+  //   "fetch": false
+  }
