--- a/flow-state/client/package.json
+++ b/flow-state/client/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.4",
@@ -20,6 +21,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "lottie-react-native": "~2.6.1",
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
@@ -51,8 +53,25 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "jest-expo": "^40.0.2",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^16.14.0",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "moduleFileExtensions": [
+      "tsx",
+      "ts",
+      "js"
+    ],
+    "automock": false,
+    "setupFiles": [
+      "./__test__/global-mock-fetch.js"
+    ]
+  }
 }
