--- a/flow-state/server/package.json
+++ b/flow-state/server/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node-fetch": "^2.5.8",
+    "@types/supertest": "^2.0.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.19",
@@ -20,11 +21,28 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
+    "jest": "^26.6.3",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
