--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "scraper": "ts-node scraper"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +32,8 @@
     "superagent": "^6.1.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
